--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+ <meta name="google-site-verification" content="a1sG3keunZPWV6rhBixmpvQE8-5QFB2cuCeWWYy7MCM" />
+   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Language Translator</title>
